Add contents from origin (partially)
- Add contents from origin (partially)

--- a/_includes/header-en.html
+++ b/_includes/header-en.html
@@ -8,7 +8,7 @@
             <path d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"></path>
         </svg>
     </button>
-    <h1 class="mainTitle"><a href="{{ site.url }}">{{ page.title }}</a></h1>
+    <h1 class="mainTitle"><a href="{{ site.url }}">{{ site.title }}</a></h1>
     <nav class="bx--header__nav">
         <ul class="hncityMenu bx--header__menu-bar">
             {% include menu-en.html %}
