--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 <html lang="ko">
     <head>
         {% include head.html %}
+        <link rel="stylesheet" href="{{ site.url }}/css/post.css" />
         <title>{{ page.title }}</title>
     </head>
     <body>
