--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -18,7 +18,7 @@
                             <a href="{{ post.url }}">
                                 <p class="small primaryDark">{{ post.date | date: "%Y년 %m월 %d일"}}</p>
                                 <h3>{{ post.title }}</h1>
-                                <p>{{ post.excerpt }}</p>
+                                <p>{{ post.excerpt | strip_html | truncatewords: 10, '…' }}</p>
                             </a>
                         </section>
                     {% endif %}
