--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,13 @@ p {
     font-size: 1.0rem;
 }
 
+b {
+    font-weight: 600;
+}
+
 blockquote {
-    display: inline-block;
-    padding: 5px;
+    padding: 2.0rem;
+    font-style: italic;
 }
 
 [hidden] {
@@ -33,6 +37,82 @@ blockquote {
     color: #2C79C7;
 }
 
+.bx--list--unordered {
+    margin-left: 1.0rem;
+    font-size: 1.0rem;
+}
+
+.bx--list--ordered {
+    margin-left: 1.5rem;
+    font-size: 1.0rem;
+}
+
+.bx--btn {
+    font-size: 1.0rem;
+}
+
+.bx--btn--primary {
+    background-color: #3799FA;
+}
+
+.bx--btn--primary:hover {
+    background-color: #2C79C7;
+}
+
+.bx--btn--primary:focus {
+    border-color: #82BFFB;
+    box-shadow: inset 0 0 0 1px #82BFFB, inset 0 0 0 2px #fff;
+}
+
+.bx--btn--secondary:focus {
+    border-color: #82BFFB;
+    box-shadow: inset 0 0 0 1px #82BFFB, inset 0 0 0 2px #fff;
+}
+
+.bx--btn--tertiary {
+    border-color: #3799FA;
+}
+
+.bx--btn--tertiary:active {
+    border-color: transparent;
+    background-color: #2C79C7;
+    color: #fff;
+}
+
+.bx--btn--tertiary:focus {
+    background-color: #3799FA;
+    color: #fff;
+    border-color: #3799FA;
+    box-shadow: inset 0 0 0 1px #3799FA, inset 0 0 0 2px #fff;
+}
+
+.bx--btn--tertiary:hover {
+    background-color: #3799FA;
+}
+
+.bx--btn--danger:focus {
+    border-color: #82BFFB;
+    box-shadow: inset 0 0 0 1px #82BFFB, inset 0 0 0 2px #fff;
+}
+
+.bx--btn--ghost {
+    color: #3799FA;
+}
+
+.bx--btn--ghost:hover, .bx--btn--ghost:active {
+    color: #2C79C7;
+}
+
+.bx--btn--ghost:focus {
+    border-color: #3799FA;
+    box-shadow: inset 0 0 0 1px #3799FA, inset 0 0 0 2px #fff;
+}
+
+.bx--btn--danger-ghost:focus, .bx--btn--danger--ghost:focus {
+    border-color: #82BFFB;
+    box-shadow: inset 0 0 0 1px #82BFFB, inset 0 0 0 2px #fff;
+}
+
 .bx--header {
     border-bottom: 2px solid #3799FA;
     background-color: white;
@@ -45,6 +125,10 @@ blockquote {
 .bx--tabs__nav-link {
     font-size: 1.0rem;
     outline-color: #82BFFB;
+}
+
+.bx--tabs__nav-item--selected:not(.bx--tabs__nav-item--disabled) .bx--tabs__nav-link, .bx--tabs__nav-item--selected:not(.bx--tabs__nav-item--disabled) .bx--tabs__nav-link:focus, .bx--tabs__nav-item--selected:not(.bx--tabs__nav-item--disabled) .bx--tabs__nav-link:active {
+    font-size: 1.0rem;
 }
 
 a.bx--tabs__nav-link:focus {
@@ -79,6 +163,14 @@ a.bx--tabs__nav-link:focus {
     color: black;
     font-family: 'Pretendard Variable', sans-serif;
     font-weight: 200;
+}
+
+.sl--nested-content {
+    padding: 0.5rem 2.0rem 0.5rem 2.0rem;
+}
+
+.sl--nested-content p {
+    padding-bottom: 0.25rem;
 }
 
 .mainTitle {
@@ -182,10 +274,7 @@ a.bx--side-nav__link:focus,
 }
 
 #main-image {
-/*
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/main_image.png") no-repeat;
-*/ 
-   background-size: cover;
+    background-size: cover;
     width: 100%;
     height: 50%;
 }
